{
    "version": 1,
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Inventory",
            "id": "dcb9c18e-2e12-4df7-b691-070fe78eaa0c",
            "actions": [
                {
                    "name": "ToggleActiveMask",
                    "type": "Value",
                    "id": "d7845bac-a0a8-49a7-8f7b-18697da4edfb",
                    "expectedControlType": "Axis",
                    "processors": "Clamp(min=-1,max=1)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SelectActiveMask",
                    "type": "Value",
                    "id": "e6e55f6b-052a-4ad6-9f9b-37b527c796a8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "80202051-f99d-49c5-b892-06c3df86c8d1",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleActiveMask",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "bb373327-369f-420e-840a-783ff1afe61f",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleActiveMask",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2d55af77-cd46-40c1-891c-aed54867961b",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleActiveMask",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "aa57e3a7-0187-4b8f-ba73-0a010946a07c",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectActiveMask",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c5ccdf1-9c84-4e74-9a6b-23b5850a4fdc",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "",
                    "action": "SelectActiveMask",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9033b13b-0b8b-4847-9c4a-1286dddf6578",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "",
                    "action": "SelectActiveMask",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df1415e9-5343-471f-9c9f-2b190d945b7f",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "Scale(factor=4)",
                    "groups": "",
                    "action": "SelectActiveMask",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "18f935d2-ed6b-4bc4-aae7-20bb89688047",
            "actions": [
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "4a419fee-9246-4064-92f9-32aa23828883",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2781c8e3-f481-4547-ae24-9b75dd5359a2",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}